<resources>
    <string name="app_name">Presto</string>
    <string name="clr_list">Clear List</string>
    <string name="exit">Exit</string>
    <string name="instr_title">Title</string>
    <string name="instr_model">Model</string>
    <string name="instr_brand">Brand</string>
    <string name="instr_price">Price</string>
    <string name="instr_enter_info">Enter Instrument Information</string>
    <string name="instr_modelInfo">Model Information</string>
    <string name="instr_brandInfo">Brand Information</string>
    <string name="instr_type">Type</string>
    <string name="instr_category">Category</string>
    <string name="instr_address">Address</string>
    <string name="addBtn">Add</string>
    <string name="book_enter_info">Enter Book Information</string>
    <string name="book_title">Title</string>
    <string name="book_desc">Describtion</string>
    <string name="book_category">Category</string>
    <string name="book_price">Price</string>
    <string name="book_type">Type</string>
    <string name="book_year">Year</string>
    <string name="book_level">Level</string>
    <string name="book_address">Address</string>
    <string name="book_pub">Publication</string>
    <string name="book_auth">Author</string>
    <string name="book">Book</string>
    <string name="instr">Instrument</string>
    <string name="admin_category">Choose your desired category</string>
    <string name="continuee">Continue</string>
    <string name="book_information">Book Infomation</string>
    <string name="instr_information">Instrument Information</string>
    <string name="clrlist_toast">You \'re about to clear all the products</string>
    <string name="clrlist_message">Are you sure to clear the list?</string>
    <string name="positive_builder">Yes</string>
    <string name="negative_builder">No</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="more">More Information</string>
    <string name="addtocart">Add to Cart</string>
    <string name="cart">Cart</string>
    <string name="your_cart">Your Cart</string>
    <string name="lang">Language</string>
    <string name="en">English</string>
    <string name="fa">Persian</string>
    <string name="chooselang">Choose your desired Language</string>
    <string name="change">Change Language</string>
    <string name="book1">Czerny Opus 599</string>
    <string name="book2">Czerny Opus 299</string>
    <string name="book3">Czerny Opus 553</string>
    <string name="book4">Anna Magdalenna Bach</string>
    <string name="book5">Artobolevskaya First Book</string>
    <string name="book6">Lemoin</string>
    <string name="book7">Artobolevskaya Second Book</string>
    <string name="book8">Scarlatti Sixty Sonatas</string>
    <string name="instr1">Bluthner</string>
    <string name="instr2">Irmler</string>
    <string name="instr3">Hassler</string>
    <string name="instr4">Irmler</string>
    <string name="instr5">Steinway</string>
    <string name="search">Search</string>
    <string name="books">Book</string>
    <string name="home">Home</string>
    <string name="addcart">Added To Cart</string>
    <string name="removecart">Removed From Cart</string>
    <string name="hometxt" translatable="false">Steinway D</string>
    <string name="hometxt2">Latest Piano Sheets and Instrument Models</string>
    <string name="bookDetails">When a student begins playing piano, the first few months must be entertaining enough to keep them engaged, but educational enough that they feel they are making progress. There are many piano books for kids available, but a few provide the right mix of familiarity and challenges likely to keep your child’s attention. Here we have provided some of the best books for everyone who wants to learn piano easily and in the best way.</string>
    <string name="instrDetails">In order to learn any kind of instrument you have to practice daily, so as a pianist having a proper piano in your home is so essential. The details of the piano that you want to buy is a major problem for everyone and specially for young music students. Here we have shown you some models of best piano brands to make your shopping easier.</string>
    <string name="book9">Scales and Chords</string>
    <string name="book10">Alfred\'s Basic Adult Piano Book</string>
    <string name="pricebook1">$ 5</string>
    <string name="pricebook5">$ 17</string>
    <string name="pricebook4">$ 1</string>
    <string name="pricebook10">$ 10</string>
    <string name="pricebook9">$ 4</string>
    <string name="pricebook8">$ 4</string>
    <string name="instrprice1">$ 33.639</string>
    <string name="instrprice4">$ 11,007</string>
    <string name="instrprice3">$ 21,400</string>
    <string name="instrprice5">$ 88,000</string>
    <string name="instrprice6">$ 93,100</string>
    <string name="instrprice7">$ 16,000</string>
    <string name="instrprice8">$ 59,500</string>
    <string name="author1">Carl Czerny</string>
    <string name="author4">Bach Family</string>
    <string name="author5">Arta Balveskaya</string>
    <string name="author6">Henry Lemoin</string>
    <string name="author8">Domenico Scarlatti</string>
    <string name="author9">Franz Schulz</string>
    <string name="author10">Willard A. Palmer, Morton Manus, Amanda Vick Lethco</string>
    <string name="seebook">You can check on our books in Books section</string>
    <string name="seeinstr">You can check on latest piano models in Instruments section</string>
</resources>
