<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="8dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:longClickable="true"
    android:visibility="visible"
    >


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:cardCornerRadius="16dp"
        app:cardBackgroundColor="@color/colorCard"
        android:longClickable="true"
        >

        <ImageView
            android:id="@+id/img_product"
            android:layout_width="100dp"
            android:layout_height="130dp"
            android:layout_margin="12dp"
            android:contentDescription="@string/book_desc"
            android:cropToPadding="true"
            android:src="@mipmap/ic_p" />

        <TextView
            android:id="@+id/name_product"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="120dp"
            android:layout_marginStart="120dp"
            android:text="@string/book"
            android:textStyle="bold"
            android:textAlignment="center"
            />
        <TextView
            android:textSize="12sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:id="@+id/lvl_product"
            android:text="@string/book"
            android:layout_marginLeft="120dp"
            android:layout_marginTop="100dp"
            android:maxLines="1"
            android:ellipsize="end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/price_product"
            android:maxLines="1"
            android:ellipsize="end"
            android:text="@string/book_price"
            android:textSize="14sp"
            android:typeface="monospace"
            android:layout_marginLeft="120dp"
            android:layout_marginTop="140dp"
            android:textColor="@color/colorPrimary"/>

        <ImageButton
            android:id="@+id/add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="100dp"
            android:backgroundTint="@color/colorCard"
            app:srcCompat="@drawable/ic_add_shopping_cart_black_24dp" />

        <ImageButton
            android:id="@+id/remove"
            android:layout_marginTop="150dp"
            android:layout_gravity="right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorCard"
            app:srcCompat="@drawable/ic_remove_shopping_cart_black_24dp" />

    </android.support.v7.widget.CardView>

</RelativeLayout>